// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Рендер чекбокса со значениями по умолчанию 1`] = `
<label
  className="checkbox"
>
  <input
    className="checkbox__input"
    name="test"
    type="checkbox"
  />
  <span
    className="checkbox__el"
  />
</label>
`;

exports[`Checkbox Рендер чекбоса с переданными значениями 1`] = `
<label
  className="checkbox custom-class"
>
  <input
    className="checkbox__input"
    name="test"
    type="checkbox"
  />
  <span
    className="checkbox__el"
  />
  <span
    className="checkbox__description"
  >
    Checkbox description
  </span>
</label>
`;
